--- a/HyuJokbo/HyuJokbo/CommentUploadView.xib
+++ b/HyuJokbo/HyuJokbo/CommentUploadView.xib
@@ -29,14 +29,13 @@
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ymh-fO-QQQ">
-                    <rect key="frame" x="288" y="537" width="22" height="22"/>
+                    <rect key="frame" x="290" y="538" width="20" height="20"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="22" id="Maa-Dj-h2u"/>
-                        <constraint firstAttribute="width" constant="22" id="W6l-zD-Tsf"/>
-                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="22" id="xES-wc-sKo"/>
+                        <constraint firstAttribute="height" constant="20" id="vhP-TP-46a"/>
+                        <constraint firstAttribute="width" constant="20" id="yNC-Cz-d8R"/>
                     </constraints>
                     <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                    <state key="normal" title="Button" image="icon-send"/>
+                    <state key="normal" image="icon-send"/>
                     <connections>
                         <action selector="addComment:" destination="-1" eventType="touchUpInside" id="d5J-yg-tVQ"/>
                     </connections>
@@ -53,6 +52,6 @@
         </view>
     </objects>
     <resources>
-        <image name="icon-send" width="64" height="64"/>
+        <image name="icon-send" width="32" height="32"/>
     </resources>
 </document>
