--- a/HyuJokbo/HyuJokbo/SearchView.xib
+++ b/HyuJokbo/HyuJokbo/SearchView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2659" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -29,14 +29,14 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="exD-Ky-gAg"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Kz-TJ-dya">
-                    <rect key="frame" x="280" y="8.5" width="40" height="22"/>
+                    <rect key="frame" x="290" y="10" width="20" height="20"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="22" id="Jpr-Zg-et9"/>
-                        <constraint firstAttribute="width" constant="40" id="g68-Q8-5HL"/>
+                        <constraint firstAttribute="height" constant="20" id="Jpr-Zg-et9"/>
+                        <constraint firstAttribute="width" constant="20" id="g68-Q8-5HL"/>
                     </constraints>
                     <state key="normal" title="Button" image="icon-cancel"/>
                     <connections>
@@ -51,7 +51,7 @@
                 <constraint firstItem="16O-qx-NQu" firstAttribute="width" secondItem="pIv-aN-PbC" secondAttribute="width" id="EOY-Ud-ovl"/>
                 <constraint firstItem="pIv-aN-PbC" firstAttribute="height" secondItem="yQc-aP-XuA" secondAttribute="height" id="WR4-ly-s7h"/>
                 <constraint firstItem="16O-qx-NQu" firstAttribute="leading" secondItem="pIv-aN-PbC" secondAttribute="leading" id="cO0-9X-lFD"/>
-                <constraint firstItem="8Kz-TJ-dya" firstAttribute="trailing" secondItem="pIv-aN-PbC" secondAttribute="trailing" id="gWd-yJ-N6F"/>
+                <constraint firstItem="8Kz-TJ-dya" firstAttribute="trailing" secondItem="pIv-aN-PbC" secondAttribute="trailing" constant="-10" id="gWd-yJ-N6F"/>
                 <constraint firstItem="8Kz-TJ-dya" firstAttribute="centerY" secondItem="16O-qx-NQu" secondAttribute="centerY" id="q41-hi-4i1"/>
                 <constraint firstItem="pIv-aN-PbC" firstAttribute="width" secondItem="yQc-aP-XuA" secondAttribute="width" id="wBI-G2-4fT"/>
             </constraints>
@@ -59,6 +59,6 @@
         </view>
     </objects>
     <resources>
-        <image name="icon-cancel" width="17" height="16"/>
+        <image name="icon-cancel" width="32" height="32"/>
     </resources>
 </document>
