--- a/HyuJokbo/HyuJokbo/SearchView.xib
+++ b/HyuJokbo/HyuJokbo/SearchView.xib
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2659" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchView" customModule="HyuJokbo" customModuleProvider="target">
             <connections>
-                <outlet property="SearchTextView" destination="16O-qx-NQu" id="089-e4-T87"/>
+                <outlet property="SearchTextField" destination="sxy-WE-heu" id="xtb-im-iVO"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -23,20 +23,21 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="16O-qx-NQu">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sxy-WE-heu">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="exD-Ky-gAg"/>
+                        <constraint firstAttribute="height" constant="40" id="J3i-oX-gMF"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                </textView>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Kz-TJ-dya">
-                    <rect key="frame" x="280" y="8.5" width="40" height="22"/>
+                    <rect key="frame" x="290" y="10" width="20" height="20"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="22" id="Jpr-Zg-et9"/>
-                        <constraint firstAttribute="width" constant="40" id="g68-Q8-5HL"/>
+                        <constraint firstAttribute="height" constant="20" id="Jpr-Zg-et9"/>
+                        <constraint firstAttribute="width" constant="20" id="g68-Q8-5HL"/>
                     </constraints>
                     <state key="normal" title="Button" image="icon-cancel"/>
                     <connections>
@@ -45,18 +46,19 @@
                 </button>
             </subviews>
             <constraints>
-                <constraint firstItem="16O-qx-NQu" firstAttribute="top" secondItem="pIv-aN-PbC" secondAttribute="top" id="4oD-yr-0oN"/>
                 <constraint firstItem="pIv-aN-PbC" firstAttribute="leading" secondItem="yQc-aP-XuA" secondAttribute="leading" id="7fU-mj-VA2"/>
                 <constraint firstItem="pIv-aN-PbC" firstAttribute="top" secondItem="yQc-aP-XuA" secondAttribute="top" id="81I-Ca-yQI"/>
-                <constraint firstItem="16O-qx-NQu" firstAttribute="width" secondItem="pIv-aN-PbC" secondAttribute="width" id="EOY-Ud-ovl"/>
+                <constraint firstItem="8Kz-TJ-dya" firstAttribute="centerY" secondItem="sxy-WE-heu" secondAttribute="centerY" id="Knh-AV-uDL"/>
                 <constraint firstItem="pIv-aN-PbC" firstAttribute="height" secondItem="yQc-aP-XuA" secondAttribute="height" id="WR4-ly-s7h"/>
-                <constraint firstItem="16O-qx-NQu" firstAttribute="leading" secondItem="pIv-aN-PbC" secondAttribute="leading" id="cO0-9X-lFD"/>
-                <constraint firstItem="8Kz-TJ-dya" firstAttribute="trailing" secondItem="pIv-aN-PbC" secondAttribute="trailing" id="gWd-yJ-N6F"/>
-                <constraint firstItem="8Kz-TJ-dya" firstAttribute="centerY" secondItem="16O-qx-NQu" secondAttribute="centerY" id="q41-hi-4i1"/>
+                <constraint firstItem="sxy-WE-heu" firstAttribute="centerX" secondItem="yQc-aP-XuA" secondAttribute="centerX" id="YAY-sd-ObI"/>
+                <constraint firstItem="sxy-WE-heu" firstAttribute="width" secondItem="yQc-aP-XuA" secondAttribute="width" id="fzt-dk-5UD"/>
+                <constraint firstItem="sxy-WE-heu" firstAttribute="top" secondItem="yQc-aP-XuA" secondAttribute="top" id="r7p-43-X7q"/>
+                <constraint firstAttribute="trailing" secondItem="8Kz-TJ-dya" secondAttribute="trailing" constant="10" id="sW7-Pt-dHR"/>
                 <constraint firstItem="pIv-aN-PbC" firstAttribute="width" secondItem="yQc-aP-XuA" secondAttribute="width" id="wBI-G2-4fT"/>
             </constraints>
             <point key="canvasLocation" x="-200" y="-588"/>
         </view>
+        <searchDisplayController id="k6g-5U-aZp"/>
     </objects>
     <resources>
         <image name="icon-cancel" width="17" height="16"/>
